--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,34 +1,35 @@
-name: Generate Snake Game
+name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Toda segunda-feira à meia-noite
-  workflow_dispatch:  # Permite execução manual
+    - cron: "0 0 * * *"
+  
+  workflow_dispatch:
+  
+  push:
+    branches:
+      - main
 
 jobs:
-  snake:
-    runs-on: ubuntu-latest
-
+  generate:
     permissions:
       contents: write
-
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    
     steps:
-      - uses: actions/checkout@v3
-      
-      - uses: Platane/snk@v3
+      - name: Generate Snake Animation
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-      
-      - uses: actions/upload-artifact@v3
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        
+      - name: Push Snake Animation to Output Branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
-          name: snake-game
-          path: dist/
-      
-      - uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
-          message: 'chore: generate snake game'
-          add: 'dist/'
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
